tests/errors/syn_method3.java
public class syn_method3 {
public int main ( ) {
 
}
}